# operating-systems

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/cpp-terminal/: CMakeLists.txt
lib/cpp-terminal/cpp-terminal/: input.cpp
src/dining-philosophers/: CMakeLists.txt  CircularList.hpp  Philosopher.hpp  main.cpp
src/readers-writers/: CMakeLists.txt  main.cpp
src/sleeping-barber/: CMakeLists.txt  main.cpp
src/utils/: Person.hpp  Timer.hpp  VariantPicker.hpp  getTimeStamp.hpp  wait.hpp
